// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`video > renders default 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"video-player video-player--poster"[39m
    [33mstyle[39m=[32m"width:700px;height:400px"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__container"[39m
      [33mdata-marko-key[39m=[32m"1 s0"[39m
      [33mstyle[39m=[32m"width:700px;height:400px"[39m
    [36m>[39m
      [36m<video[39m
        [33mno-controls[39m=[32m""[39m
      [36m>[39m
        [36m<source[39m
          [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c1/ebayui/video/v1/playlist.mpd"[39m
          [33mtype[39m=[32m"dash"[39m
        [36m/>[39m
      [36m</video>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__overlay video-player__overlay--hidden"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--24"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-attention-24"[39m
            [33mviewBox[39m=[32m"0 0 24 24"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12C23.994 5.375 18.625.006 12 0Zm0 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10ZM11 7a1 1 0 1 1 2 0v6a1 1 0 1 1-2 0V7Zm1 11a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-attention-24"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<div[39m
        [33mclass[39m=[32m"video-player__overlay-text"[39m
      [36m>[39m
        [0mAn error has occurred[0m
      [36m</div>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__overlay video-player__overlay--hidden"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"progress-spinner"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--24"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mfill[39m=[32m"none"[39m
              [33mid[39m=[32m"icon-spinner-24"[39m
              [33mviewBox[39m=[32m"0 0 24 24"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M22.5 12A10.5 10.5 0 1 1 9.514 1.798"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-background, #3665F3)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
              [36m<path[39m
                [33md[39m=[32m"M14.606 1.829a10.5 10.5 0 0 1 4.056 2.055 10.499 10.499 0 0 1 2.806 3.577"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-foreground, #E5E5E5)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-spinner-24"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mstyle[39m=[32m"display:none"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--64-colored"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-play-filled-64-colored"[39m
            [33mviewBox[39m=[32m"0 0 64 64"[39m
          [36m>[39m
            [36m<circle[39m
              [33mcx[39m=[32m"32"[39m
              [33mcy[39m=[32m"32"[39m
              [33mfill[39m=[32m"#fff"[39m
              [33mfill-opacity[39m=[32m".88"[39m
              [33mr[39m=[32m"32"[39m
            [36m/>[39m
            [36m<path[39m
              [33md[39m=[32m"m26.131 16.41 21.6 13.33a2.648 2.648 0 0 1 0 4.52l-21.6 13.33C24.333 48.7 22 47.425 22 45.33V18.67c0-2.094 2.333-3.37 4.131-2.26Z"[39m
              [33mfill[39m=[32m"#191919"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-play-filled-64-colored"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@flag-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-flag-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M13.797 1.396A.996.996 0 0 1 14 2a1 1 0 0 1-.44.828l-1.95 1.476-.939.698 2.92 2.19a1.02 1.02 0 0 1 .304.36.994.994 0 0 1 .054.763.998.998 0 0 1-.96.684H5v5a1 1 0 0 1-2 0V2a1 1 0 0 1 1.045-1h8.898a1 1 0 0 1 .854.396ZM10 7 8.418 5.813a1 1 0 0 1-.004-1.624l1.598-1.188H5V7h5Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@flag-icon-0-text"[39m
        [36m>[39m
          [0mReport[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-flag-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@audio-off-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-audio-off-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M13.441 10.371A5.32 5.32 0 0 0 14 8.001c0-2.213-1.377-4.166-3.413-5.09a1 1 0 1 1 .826-1.821C14.09 2.304 16 4.924 16 8a7.317 7.317 0 0 1-.999 3.692l.645.545a1 1 0 0 1-1.292 1.527l-13-11a1 1 0 0 1 1.292-1.527L4.71 2.985l1.69-.862a1.1 1.1 0 0 1 1.6.98v2.664l2 1.693V5.384c0-.277.228-.473.465-.331C11.102 5.435 12 6.453 12 8c0 .375-.053.72-.142 1.031l1.583 1.34ZM1.442 4.803a4.265 4.265 0 0 0 .885 6.997L6.4 13.877a1.1 1.1 0 0 0 1.6-.98v-2.545L6 8.66v2.768l-2.764-1.41A2.265 2.265 0 0 1 3 6.121L1.442 4.803Zm9.145 8.287a6.19 6.19 0 0 0 .407-.204l1.52 1.286c.03.025.06.05.09.073a8.11 8.11 0 0 1-1.19.666 1 1 0 1 1-.827-1.821Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@audio-off-icon-0-text"[39m
        [36m>[39m
          [0mUnmute[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-audio-off-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@audio-high-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-audio-high-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M11.413 1.09a1 1 0 1 0-.826 1.82C12.623 3.835 14 5.788 14 8c0 2.212-1.377 4.165-3.413 5.09a1 1 0 0 0 .826 1.82C14.09 13.696 16 11.076 16 8s-1.91-5.696-4.587-6.91Z"[39m
            [36m/>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M6.4 2.125a1.1 1.1 0 0 1 1.6.98v9.794a1.1 1.1 0 0 1-1.6.98L2.326 11.8a4.265 4.265 0 0 1 .002-7.598L6.4 2.125ZM6 4.574 3.237 5.983a2.265 2.265 0 0 0-.002 4.035L6 11.43V4.574Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
            [36m<path[39m
              [33md[39m=[32m"M10 10.621c0 .276.228.473.464.33.638-.383 1.536-1.404 1.536-2.95 0-1.548-.898-2.567-1.535-2.949-.237-.142-.465.055-.465.331v5.238Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@audio-high-icon-0-text"[39m
        [36m>[39m
          [0mMute[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-audio-high-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@expand-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-expand-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M3.5 1H5a1 1 0 0 1 0 2H3.5a.5.5 0 0 0-.5.5V5a1 1 0 0 1-2 0V3.5A2.5 2.5 0 0 1 3.5 1ZM2 10a1 1 0 0 0-1 1v1.5A2.5 2.5 0 0 0 3.5 15H5a1 1 0 1 0 0-2H3.5a.5.5 0 0 1-.5-.5V11a1 1 0 0 0-1-1Zm12 0a1 1 0 0 0-1 1v1.5a.5.5 0 0 1-.5.5H11a1 1 0 1 0 0 2h1.5a2.5 2.5 0 0 0 2.5-2.5V11a1 1 0 0 0-1-1Zm0-4a1 1 0 0 0 1-1V3.5A2.5 2.5 0 0 0 12.5 1H11a1 1 0 1 0 0 2h1.5a.5.5 0 0 1 .5.5V5a1 1 0 0 0 1 1Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@expand-icon-0-text"[39m
        [36m>[39m
          [0mEnter fullscreen[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-expand-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@contract-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-contract-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M6 2a1 1 0 1 0-2 0v1.5a.5.5 0 0 1-.5.5H2a1 1 0 0 0 0 2h1.5A2.5 2.5 0 0 0 6 3.5V2Zm4 0a1 1 0 1 1 2 0v1.5a.5.5 0 0 0 .5.5H14a1 1 0 1 1 0 2h-1.5A2.5 2.5 0 0 1 10 3.5V2Zm1 13a1 1 0 0 1-1-1v-1.5a2.5 2.5 0 0 1 2.5-2.5H14a1 1 0 1 1 0 2h-1.5a.5.5 0 0 0-.5.5V14a1 1 0 0 1-1 1Zm-5-1a1 1 0 1 1-2 0v-1.5a.5.5 0 0 0-.5-.5H2a1 1 0 1 1 0-2h1.5A2.5 2.5 0 0 1 6 12.5V14Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@contract-icon-0-text"[39m
        [36m>[39m
          [0mExit fullscreen[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-contract-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`video > renders ios video player 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"video-player video-player--poster"[39m
    [33mstyle[39m=[32m"width:700px;height:400px"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__container"[39m
      [33mdata-marko-key[39m=[32m"1 s0"[39m
      [33mstyle[39m=[32m"width:700px;height:400px"[39m
    [36m>[39m
      [36m<video[39m
        [33mno-controls[39m=[32m""[39m
        [33mshaka-config[39m=[32m"{\\"streaming\\":{\\"lowLatencyMode\\":true}}"[39m
      [36m>[39m
        [36m<source[39m
          [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c1/ebayui/video/v1/playlist.m3u8"[39m
          [33mtype[39m=[32m"hls"[39m
        [36m/>[39m
        [36m<source[39m
          [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c1/ebayui/video/v1/playlist.mpd"[39m
          [33mtype[39m=[32m"dash"[39m
        [36m/>[39m
      [36m</video>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__overlay video-player__overlay--hidden"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--24"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-attention-24"[39m
            [33mviewBox[39m=[32m"0 0 24 24"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12C23.994 5.375 18.625.006 12 0Zm0 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10ZM11 7a1 1 0 1 1 2 0v6a1 1 0 1 1-2 0V7Zm1 11a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-attention-24"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<div[39m
        [33mclass[39m=[32m"video-player__overlay-text"[39m
      [36m>[39m
        [0mAn error has occurred[0m
      [36m</div>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__overlay video-player__overlay--hidden"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"progress-spinner"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--24"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mfill[39m=[32m"none"[39m
              [33mid[39m=[32m"icon-spinner-24"[39m
              [33mviewBox[39m=[32m"0 0 24 24"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M22.5 12A10.5 10.5 0 1 1 9.514 1.798"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-background, #3665F3)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
              [36m<path[39m
                [33md[39m=[32m"M14.606 1.829a10.5 10.5 0 0 1 4.056 2.055 10.499 10.499 0 0 1 2.806 3.577"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-foreground, #E5E5E5)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-spinner-24"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mstyle[39m=[32m"display:none"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--64-colored"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-play-filled-64-colored"[39m
            [33mviewBox[39m=[32m"0 0 64 64"[39m
          [36m>[39m
            [36m<circle[39m
              [33mcx[39m=[32m"32"[39m
              [33mcy[39m=[32m"32"[39m
              [33mfill[39m=[32m"#fff"[39m
              [33mfill-opacity[39m=[32m".88"[39m
              [33mr[39m=[32m"32"[39m
            [36m/>[39m
            [36m<path[39m
              [33md[39m=[32m"m26.131 16.41 21.6 13.33a2.648 2.648 0 0 1 0 4.52l-21.6 13.33C24.333 48.7 22 47.425 22 45.33V18.67c0-2.094 2.333-3.37 4.131-2.26Z"[39m
              [33mfill[39m=[32m"#191919"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-play-filled-64-colored"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@flag-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-flag-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M13.797 1.396A.996.996 0 0 1 14 2a1 1 0 0 1-.44.828l-1.95 1.476-.939.698 2.92 2.19a1.02 1.02 0 0 1 .304.36.994.994 0 0 1 .054.763.998.998 0 0 1-.96.684H5v5a1 1 0 0 1-2 0V2a1 1 0 0 1 1.045-1h8.898a1 1 0 0 1 .854.396ZM10 7 8.418 5.813a1 1 0 0 1-.004-1.624l1.598-1.188H5V7h5Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@flag-icon-0-text"[39m
        [36m>[39m
          [0mReport[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-flag-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@audio-off-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-audio-off-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M13.441 10.371A5.32 5.32 0 0 0 14 8.001c0-2.213-1.377-4.166-3.413-5.09a1 1 0 1 1 .826-1.821C14.09 2.304 16 4.924 16 8a7.317 7.317 0 0 1-.999 3.692l.645.545a1 1 0 0 1-1.292 1.527l-13-11a1 1 0 0 1 1.292-1.527L4.71 2.985l1.69-.862a1.1 1.1 0 0 1 1.6.98v2.664l2 1.693V5.384c0-.277.228-.473.465-.331C11.102 5.435 12 6.453 12 8c0 .375-.053.72-.142 1.031l1.583 1.34ZM1.442 4.803a4.265 4.265 0 0 0 .885 6.997L6.4 13.877a1.1 1.1 0 0 0 1.6-.98v-2.545L6 8.66v2.768l-2.764-1.41A2.265 2.265 0 0 1 3 6.121L1.442 4.803Zm9.145 8.287a6.19 6.19 0 0 0 .407-.204l1.52 1.286c.03.025.06.05.09.073a8.11 8.11 0 0 1-1.19.666 1 1 0 1 1-.827-1.821Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@audio-off-icon-0-text"[39m
        [36m>[39m
          [0mUnmute[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-audio-off-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@audio-high-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-audio-high-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M11.413 1.09a1 1 0 1 0-.826 1.82C12.623 3.835 14 5.788 14 8c0 2.212-1.377 4.165-3.413 5.09a1 1 0 0 0 .826 1.82C14.09 13.696 16 11.076 16 8s-1.91-5.696-4.587-6.91Z"[39m
            [36m/>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M6.4 2.125a1.1 1.1 0 0 1 1.6.98v9.794a1.1 1.1 0 0 1-1.6.98L2.326 11.8a4.265 4.265 0 0 1 .002-7.598L6.4 2.125ZM6 4.574 3.237 5.983a2.265 2.265 0 0 0-.002 4.035L6 11.43V4.574Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
            [36m<path[39m
              [33md[39m=[32m"M10 10.621c0 .276.228.473.464.33.638-.383 1.536-1.404 1.536-2.95 0-1.548-.898-2.567-1.535-2.949-.237-.142-.465.055-.465.331v5.238Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@audio-high-icon-0-text"[39m
        [36m>[39m
          [0mMute[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-audio-high-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@expand-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-expand-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M3.5 1H5a1 1 0 0 1 0 2H3.5a.5.5 0 0 0-.5.5V5a1 1 0 0 1-2 0V3.5A2.5 2.5 0 0 1 3.5 1ZM2 10a1 1 0 0 0-1 1v1.5A2.5 2.5 0 0 0 3.5 15H5a1 1 0 1 0 0-2H3.5a.5.5 0 0 1-.5-.5V11a1 1 0 0 0-1-1Zm12 0a1 1 0 0 0-1 1v1.5a.5.5 0 0 1-.5.5H11a1 1 0 1 0 0 2h1.5a2.5 2.5 0 0 0 2.5-2.5V11a1 1 0 0 0-1-1Zm0-4a1 1 0 0 0 1-1V3.5A2.5 2.5 0 0 0 12.5 1H11a1 1 0 1 0 0 2h1.5a.5.5 0 0 1 .5.5V5a1 1 0 0 0 1 1Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@expand-icon-0-text"[39m
        [36m>[39m
          [0mEnter fullscreen[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-expand-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@contract-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-contract-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M6 2a1 1 0 1 0-2 0v1.5a.5.5 0 0 1-.5.5H2a1 1 0 0 0 0 2h1.5A2.5 2.5 0 0 0 6 3.5V2Zm4 0a1 1 0 1 1 2 0v1.5a.5.5 0 0 0 .5.5H14a1 1 0 1 1 0 2h-1.5A2.5 2.5 0 0 1 10 3.5V2Zm1 13a1 1 0 0 1-1-1v-1.5a2.5 2.5 0 0 1 2.5-2.5H14a1 1 0 1 1 0 2h-1.5a.5.5 0 0 0-.5.5V14a1 1 0 0 1-1 1Zm-5-1a1 1 0 1 1-2 0v-1.5a.5.5 0 0 0-.5-.5H2a1 1 0 1 1 0-2h1.5A2.5 2.5 0 0 1 6 12.5V14Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@contract-icon-0-text"[39m
        [36m>[39m
          [0mExit fullscreen[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-contract-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`video > renders with mp4 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"video-player video-player--poster"[39m
    [33mstyle[39m=[32m"width:460px;height:300px"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__container"[39m
      [33mdata-marko-key[39m=[32m"1 s0"[39m
      [33mstyle[39m=[32m"width:460px;height:300px"[39m
    [36m>[39m
      [36m<video[39m
        [33mno-controls[39m=[32m""[39m
      [36m>[39m
        [36m<source[39m
          [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c1/ebayui/video/v1/video.mp4"[39m
        [36m/>[39m
      [36m</video>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__overlay video-player__overlay--hidden"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--24"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-attention-24"[39m
            [33mviewBox[39m=[32m"0 0 24 24"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12C23.994 5.375 18.625.006 12 0Zm0 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10ZM11 7a1 1 0 1 1 2 0v6a1 1 0 1 1-2 0V7Zm1 11a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-attention-24"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<div[39m
        [33mclass[39m=[32m"video-player__overlay-text"[39m
      [36m>[39m
        [0mAn error has occurred[0m
      [36m</div>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__overlay video-player__overlay--hidden"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"progress-spinner"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--24"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mfill[39m=[32m"none"[39m
              [33mid[39m=[32m"icon-spinner-24"[39m
              [33mviewBox[39m=[32m"0 0 24 24"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M22.5 12A10.5 10.5 0 1 1 9.514 1.798"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-background, #3665F3)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
              [36m<path[39m
                [33md[39m=[32m"M14.606 1.829a10.5 10.5 0 0 1 4.056 2.055 10.499 10.499 0 0 1 2.806 3.577"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-foreground, #E5E5E5)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-spinner-24"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mstyle[39m=[32m"display:none"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--64-colored"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-play-filled-64-colored"[39m
            [33mviewBox[39m=[32m"0 0 64 64"[39m
          [36m>[39m
            [36m<circle[39m
              [33mcx[39m=[32m"32"[39m
              [33mcy[39m=[32m"32"[39m
              [33mfill[39m=[32m"#fff"[39m
              [33mfill-opacity[39m=[32m".88"[39m
              [33mr[39m=[32m"32"[39m
            [36m/>[39m
            [36m<path[39m
              [33md[39m=[32m"m26.131 16.41 21.6 13.33a2.648 2.648 0 0 1 0 4.52l-21.6 13.33C24.333 48.7 22 47.425 22 45.33V18.67c0-2.094 2.333-3.37 4.131-2.26Z"[39m
              [33mfill[39m=[32m"#191919"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-play-filled-64-colored"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@flag-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-flag-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M13.797 1.396A.996.996 0 0 1 14 2a1 1 0 0 1-.44.828l-1.95 1.476-.939.698 2.92 2.19a1.02 1.02 0 0 1 .304.36.994.994 0 0 1 .054.763.998.998 0 0 1-.96.684H5v5a1 1 0 0 1-2 0V2a1 1 0 0 1 1.045-1h8.898a1 1 0 0 1 .854.396ZM10 7 8.418 5.813a1 1 0 0 1-.004-1.624l1.598-1.188H5V7h5Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@flag-icon-0-text"[39m
        [36m>[39m
          [0mReport[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-flag-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@audio-off-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-audio-off-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M13.441 10.371A5.32 5.32 0 0 0 14 8.001c0-2.213-1.377-4.166-3.413-5.09a1 1 0 1 1 .826-1.821C14.09 2.304 16 4.924 16 8a7.317 7.317 0 0 1-.999 3.692l.645.545a1 1 0 0 1-1.292 1.527l-13-11a1 1 0 0 1 1.292-1.527L4.71 2.985l1.69-.862a1.1 1.1 0 0 1 1.6.98v2.664l2 1.693V5.384c0-.277.228-.473.465-.331C11.102 5.435 12 6.453 12 8c0 .375-.053.72-.142 1.031l1.583 1.34ZM1.442 4.803a4.265 4.265 0 0 0 .885 6.997L6.4 13.877a1.1 1.1 0 0 0 1.6-.98v-2.545L6 8.66v2.768l-2.764-1.41A2.265 2.265 0 0 1 3 6.121L1.442 4.803Zm9.145 8.287a6.19 6.19 0 0 0 .407-.204l1.52 1.286c.03.025.06.05.09.073a8.11 8.11 0 0 1-1.19.666 1 1 0 1 1-.827-1.821Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@audio-off-icon-0-text"[39m
        [36m>[39m
          [0mUnmute[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-audio-off-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@audio-high-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-audio-high-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M11.413 1.09a1 1 0 1 0-.826 1.82C12.623 3.835 14 5.788 14 8c0 2.212-1.377 4.165-3.413 5.09a1 1 0 0 0 .826 1.82C14.09 13.696 16 11.076 16 8s-1.91-5.696-4.587-6.91Z"[39m
            [36m/>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M6.4 2.125a1.1 1.1 0 0 1 1.6.98v9.794a1.1 1.1 0 0 1-1.6.98L2.326 11.8a4.265 4.265 0 0 1 .002-7.598L6.4 2.125ZM6 4.574 3.237 5.983a2.265 2.265 0 0 0-.002 4.035L6 11.43V4.574Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
            [36m<path[39m
              [33md[39m=[32m"M10 10.621c0 .276.228.473.464.33.638-.383 1.536-1.404 1.536-2.95 0-1.548-.898-2.567-1.535-2.949-.237-.142-.465.055-.465.331v5.238Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@audio-high-icon-0-text"[39m
        [36m>[39m
          [0mMute[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-audio-high-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@expand-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-expand-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M3.5 1H5a1 1 0 0 1 0 2H3.5a.5.5 0 0 0-.5.5V5a1 1 0 0 1-2 0V3.5A2.5 2.5 0 0 1 3.5 1ZM2 10a1 1 0 0 0-1 1v1.5A2.5 2.5 0 0 0 3.5 15H5a1 1 0 1 0 0-2H3.5a.5.5 0 0 1-.5-.5V11a1 1 0 0 0-1-1Zm12 0a1 1 0 0 0-1 1v1.5a.5.5 0 0 1-.5.5H11a1 1 0 1 0 0 2h1.5a2.5 2.5 0 0 0 2.5-2.5V11a1 1 0 0 0-1-1Zm0-4a1 1 0 0 0 1-1V3.5A2.5 2.5 0 0 0 12.5 1H11a1 1 0 1 0 0 2h1.5a.5.5 0 0 1 .5.5V5a1 1 0 0 0 1 1Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@expand-icon-0-text"[39m
        [36m>[39m
          [0mEnter fullscreen[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-expand-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@contract-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-contract-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M6 2a1 1 0 1 0-2 0v1.5a.5.5 0 0 1-.5.5H2a1 1 0 0 0 0 2h1.5A2.5 2.5 0 0 0 6 3.5V2Zm4 0a1 1 0 1 1 2 0v1.5a.5.5 0 0 0 .5.5H14a1 1 0 1 1 0 2h-1.5A2.5 2.5 0 0 1 10 3.5V2Zm1 13a1 1 0 0 1-1-1v-1.5a2.5 2.5 0 0 1 2.5-2.5H14a1 1 0 1 1 0 2h-1.5a.5.5 0 0 0-.5.5V14a1 1 0 0 1-1 1Zm-5-1a1 1 0 1 1-2 0v-1.5a.5.5 0 0 0-.5-.5H2a1 1 0 1 1 0-2h1.5A2.5 2.5 0 0 1 6 12.5V14Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@contract-icon-0-text"[39m
        [36m>[39m
          [0mExit fullscreen[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-contract-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`video > renders with report text 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"video-player video-player--poster"[39m
    [33mstyle[39m=[32m"width:700px;height:400px"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__container"[39m
      [33mdata-marko-key[39m=[32m"1 s0"[39m
      [33mstyle[39m=[32m"width:700px;height:400px"[39m
    [36m>[39m
      [36m<video[39m
        [33mno-controls[39m=[32m""[39m
      [36m>[39m
        [36m<source[39m
          [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c1/ebayui/video/v1/playlist.mpd"[39m
          [33mtype[39m=[32m"dash"[39m
        [36m/>[39m
      [36m</video>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__overlay video-player__overlay--hidden"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--24"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-attention-24"[39m
            [33mviewBox[39m=[32m"0 0 24 24"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12C23.994 5.375 18.625.006 12 0Zm0 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10ZM11 7a1 1 0 1 1 2 0v6a1 1 0 1 1-2 0V7Zm1 11a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-attention-24"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<div[39m
        [33mclass[39m=[32m"video-player__overlay-text"[39m
      [36m>[39m
        [0mAn error has occurred[0m
      [36m</div>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"video-player__overlay video-player__overlay--hidden"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"progress-spinner"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--24"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mfill[39m=[32m"none"[39m
              [33mid[39m=[32m"icon-spinner-24"[39m
              [33mviewBox[39m=[32m"0 0 24 24"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M22.5 12A10.5 10.5 0 1 1 9.514 1.798"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-background, #3665F3)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
              [36m<path[39m
                [33md[39m=[32m"M14.606 1.829a10.5 10.5 0 0 1 4.056 2.055 10.499 10.499 0 0 1 2.806 3.577"[39m
                [33mstroke[39m=[32m"var(--color-spinner-icon-foreground, #E5E5E5)"[39m
                [33mstroke-linecap[39m=[32m"round"[39m
                [33mstroke-linejoin[39m=[32m"round"[39m
                [33mstroke-width[39m=[32m"3"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-spinner-24"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mstyle[39m=[32m"display:none"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--64-colored"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-play-filled-64-colored"[39m
            [33mviewBox[39m=[32m"0 0 64 64"[39m
          [36m>[39m
            [36m<circle[39m
              [33mcx[39m=[32m"32"[39m
              [33mcy[39m=[32m"32"[39m
              [33mfill[39m=[32m"#fff"[39m
              [33mfill-opacity[39m=[32m".88"[39m
              [33mr[39m=[32m"32"[39m
            [36m/>[39m
            [36m<path[39m
              [33md[39m=[32m"m26.131 16.41 21.6 13.33a2.648 2.648 0 0 1 0 4.52l-21.6 13.33C24.333 48.7 22 47.425 22 45.33V18.67c0-2.094 2.333-3.37 4.131-2.26Z"[39m
              [33mfill[39m=[32m"#191919"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-play-filled-64-colored"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@flag-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-flag-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M13.797 1.396A.996.996 0 0 1 14 2a1 1 0 0 1-.44.828l-1.95 1.476-.939.698 2.92 2.19a1.02 1.02 0 0 1 .304.36.994.994 0 0 1 .054.763.998.998 0 0 1-.96.684H5v5a1 1 0 0 1-2 0V2a1 1 0 0 1 1.045-1h8.898a1 1 0 0 1 .854.396ZM10 7 8.418 5.813a1 1 0 0 1-.004-1.624l1.598-1.188H5V7h5Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@flag-icon-0-text"[39m
        [36m>[39m
          [0mThis is a report text[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-flag-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@audio-off-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-audio-off-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M13.441 10.371A5.32 5.32 0 0 0 14 8.001c0-2.213-1.377-4.166-3.413-5.09a1 1 0 1 1 .826-1.821C14.09 2.304 16 4.924 16 8a7.317 7.317 0 0 1-.999 3.692l.645.545a1 1 0 0 1-1.292 1.527l-13-11a1 1 0 0 1 1.292-1.527L4.71 2.985l1.69-.862a1.1 1.1 0 0 1 1.6.98v2.664l2 1.693V5.384c0-.277.228-.473.465-.331C11.102 5.435 12 6.453 12 8c0 .375-.053.72-.142 1.031l1.583 1.34ZM1.442 4.803a4.265 4.265 0 0 0 .885 6.997L6.4 13.877a1.1 1.1 0 0 0 1.6-.98v-2.545L6 8.66v2.768l-2.764-1.41A2.265 2.265 0 0 1 3 6.121L1.442 4.803Zm9.145 8.287a6.19 6.19 0 0 0 .407-.204l1.52 1.286c.03.025.06.05.09.073a8.11 8.11 0 0 1-1.19.666 1 1 0 1 1-.827-1.821Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@audio-off-icon-0-text"[39m
        [36m>[39m
          [0mUnmute[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-audio-off-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@audio-high-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-audio-high-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M11.413 1.09a1 1 0 1 0-.826 1.82C12.623 3.835 14 5.788 14 8c0 2.212-1.377 4.165-3.413 5.09a1 1 0 0 0 .826 1.82C14.09 13.696 16 11.076 16 8s-1.91-5.696-4.587-6.91Z"[39m
            [36m/>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M6.4 2.125a1.1 1.1 0 0 1 1.6.98v9.794a1.1 1.1 0 0 1-1.6.98L2.326 11.8a4.265 4.265 0 0 1 .002-7.598L6.4 2.125ZM6 4.574 3.237 5.983a2.265 2.265 0 0 0-.002 4.035L6 11.43V4.574Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
            [36m<path[39m
              [33md[39m=[32m"M10 10.621c0 .276.228.473.464.33.638-.383 1.536-1.404 1.536-2.95 0-1.548-.898-2.567-1.535-2.949-.237-.142-.465.055-.465.331v5.238Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@audio-high-icon-0-text"[39m
        [36m>[39m
          [0mMute[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-audio-high-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@expand-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-expand-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M3.5 1H5a1 1 0 0 1 0 2H3.5a.5.5 0 0 0-.5.5V5a1 1 0 0 1-2 0V3.5A2.5 2.5 0 0 1 3.5 1ZM2 10a1 1 0 0 0-1 1v1.5A2.5 2.5 0 0 0 3.5 15H5a1 1 0 1 0 0-2H3.5a.5.5 0 0 1-.5-.5V11a1 1 0 0 0-1-1Zm12 0a1 1 0 0 0-1 1v1.5a.5.5 0 0 1-.5.5H11a1 1 0 1 0 0 2h1.5a2.5 2.5 0 0 0 2.5-2.5V11a1 1 0 0 0-1-1Zm0-4a1 1 0 0 0 1-1V3.5A2.5 2.5 0 0 0 12.5 1H11a1 1 0 1 0 0 2h1.5a.5.5 0 0 1 .5.5V5a1 1 0 0 0 1 1Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@expand-icon-0-text"[39m
        [36m>[39m
          [0mEnter fullscreen[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-expand-16"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<svg[39m
        [33maria-labelledby[39m=[32m"s0-@contract-icon-0-text"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
        [33mrole[39m=[32m"img"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-contract-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M6 2a1 1 0 1 0-2 0v1.5a.5.5 0 0 1-.5.5H2a1 1 0 0 0 0 2h1.5A2.5 2.5 0 0 0 6 3.5V2Zm4 0a1 1 0 1 1 2 0v1.5a.5.5 0 0 0 .5.5H14a1 1 0 1 1 0 2h-1.5A2.5 2.5 0 0 1 10 3.5V2Zm1 13a1 1 0 0 1-1-1v-1.5a2.5 2.5 0 0 1 2.5-2.5H14a1 1 0 1 1 0 2h-1.5a.5.5 0 0 0-.5.5V14a1 1 0 0 1-1 1Zm-5-1a1 1 0 1 1-2 0v-1.5a.5.5 0 0 0-.5-.5H2a1 1 0 1 1 0-2h1.5A2.5 2.5 0 0 1 6 12.5V14Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<title[39m
          [33mid[39m=[32m"s0-@contract-icon-0-text"[39m
        [36m>[39m
          [0mExit fullscreen[0m
        [36m</title>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-contract-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;
